@@ -4,6 +4,18 @@
 \alias{trim,InteractionSet-method}
 \alias{trim,ContactMatrix-method}
 
+\alias{shift,GInteractions-method}
+\alias{shift,InteractionSet-method}
+\alias{shift,ContactMatrix-method}
+
+\alias{narrow,GInteractions-method}
+\alias{narrow,InteractionSet-method}
+\alias{narrow,ContactMatrix-method}
+
+\alias{resize,GInteractions-method}
+\alias{resize,InteractionSet-method}
+\alias{resize,ContactMatrix-method}
+
 \alias{width,GInteractions-method}
 \alias{width,InteractionSet-method}
 \alias{width,ContactMatrix-method}
@@ -14,21 +26,36 @@
 
 \usage{
 \S4method{trim}{GInteractions}(x, use.names=FALSE)
-\S4method{width}{GInteractions}(x)
+\S4method{trim}{InteractionSet}(x, use.names=FALSE)
+\S4method{trim}{ContactMatrix}(x, use.names=FALSE)
 
-# Equivalent calls for InteractionSet and ContactMatrix.
+\S4method{resize}{GInteractions}(x, width, fix="start", use.names=TRUE, ...)
+\S4method{resize}{InteractionSet}(x, width, fix="start", use.names=TRUE, ...)
+\S4method{resize}{ContactMatrix}(x, width, fix="start", use.names=TRUE, ...)
+
+\S4method{narrow}{GInteractions}(x, start=NA, end=NA, width=NA, use.names=TRUE)
+\S4method{narrow}{InteractionSet}(x, start=NA, end=NA, width=NA, use.names=TRUE)
+\S4method{narrow}{ContactMatrix}(x, start=NA, end=NA, width=NA, use.names=TRUE)
+
+\S4method{shift}{GInteractions}(x, shift=0L, use.names=TRUE) 
+\S4method{shift}{InteractionSet}(x, shift=0L, use.names=TRUE) 
+\S4method{shift}{ContactMatrix}(x, shift=0L, use.names=TRUE) 
+
+\S4method{width}{GInteractions}(x)
+\S4method{width}{InteractionSet}(x)
+\S4method{width}{ContactMatrix}(x)
 }
 
 \arguments{
 \item{x}{A GInteractions, InteractionSet or ContactMatrix object.}
-\item{use.names}{See \code{?"\link{trim,GenomicRanges-method}"}.}
+\item{use.names, width, fix, start, end, shift, ...}{Further arguments to pass to the relevant GenomicRanges methods.}
 }
 
 \details{
-The \code{trim} method will return an object of the same class as \code{x} where out-of-bound ranges in \code{regions(x)} are truncated to fit.
-This is followed by resorting of the regions and removal of redundant regions.
-As such, that the length of \code{regions(x)} and the anchor indices for each interaction may change before and after trimming.
-However, the number and order of the interactions will not change.
+The \code{trim}, \code{resize}, \code{narrow} and \code{shift} methods will apply the GenomicRanges methods with the same name to the entries of \code{regions(x)}.
+The modified regions are then potentially resorted to ensure that the entries in the \code{regions} slot of the output object are ordered.
+This means that the order of the ranges in the \code{regions} slot may change between the input and output object.
+However, the number and order of the \emph{interactions} will not change.
 
 For GInteractions and InteractionSet objects, the \code{width} method will return a DataFrame with integer fields \code{anchor1} and \code{anchor2}.
 Each row contains the width of the two anchor regions corresponding to each interaction.
@@ -40,8 +67,11 @@ Depending on the method, an object of the same class as \code{x}, or information
 }
 
 \seealso{
-\code{\link{trim}},
-\code{\link{width}}
+\code{\link{trim,GenomicRanges-method}},
+\code{\link{resize,GenomicRanges-method}},
+\code{\link{narrow,GenomicRanges-method}},
+\code{\link{shift,GenomicRanges-method}},
+\code{\link{width,IRanges-method}}
 }
 
 \examples{
